--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -74,12 +74,15 @@ jobs:
       uses: advanced-security/maven-dependency-submission-action@v3
 
   build:
+    needs: [maven_test]
     name: Build and analyze
     runs-on: ubuntu-latest
     steps:
-        - uses: actions/checkout@v4
+        - name: Restore cached build
+          uses: actions/cache@v3
           with:
-            fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+            key: cached-build-${{github.sha}}
+            path: .
         - name: Set up JDK 17
           uses: actions/setup-java@v4
           with:
